crates/oxc_css/tests/error/less/variable/bad-declaration-1.snap
---
source: crates/oxc_css/tests/error.rs
---
error: CSS rule is expected
  ┌─ bad-declaration-1.less:1:1
  │
1 │ @@demo: "hi";
  │ ^


